# packagekit_dart

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pubignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  codecov.yml  pubspec.yaml
.github/workflows/: ci.yml
example/: example.dart  get_updates.dart  install.dart  list_repos.dart  monitor_updates.dart  search.dart  simulate_install.dart
example/flutter_example/: README.md  pubspec.yaml
example/flutter_example/lib/: main.dart
example/flutter_example/lib/pages/: daemon_info_page.dart  detail_sheet.dart  installed_page.dart  operations_page.dart  repos_page.dart  search_page.dart  updates_page.dart
example/flutter_example/linux/: CMakeLists.txt
example/flutter_example/linux/runner/: my_application.cc
example/flutter_example/test/: widget_test.dart
example/packagekit_catalog/: .gitignore  pubspec.yaml
example/packagekit_catalog/lib/: app.dart  main.dart
example/packagekit_catalog/lib/models/: view_models.dart
example/packagekit_catalog/lib/providers/: operation_provider.dart  package_detail_provider.dart  packagekit_provider.dart  packages_provider.dart
example/packagekit_catalog/lib/screens/: catalog_screen.dart  installed_screen.dart  repos_screen.dart  shell.dart  updates_screen.dart
example/packagekit_catalog/linux/: CMakeLists.txt
hook/: build.dart
interfaces/: org.freedesktop.PackageKit.Offline.xml  org.freedesktop.PackageKit.Transaction.xml  org.freedesktop.PackageKit.xml
lib/: packagekit_dart.dart
lib/src/: details.dart  enums.dart  exceptions.dart  package.dart  packagekit_client.dart  repo.dart  transaction.dart
lib/src/ffi/: bindings.dart  codec.dart  types.dart
lib/src/internal/: dispatcher.dart  library_loader.dart
native/: CMakeLists.txt
native/cmake/: ClangFormat.cmake  ClangTidy.cmake  Coverage.cmake  Sanitizers.cmake
native/include/: dart_api.h  dart_api_dl.h  dart_native_api.h  glaze_meta.h  pk_bridge.h  pk_manager.h  pk_transaction.h  pk_types.h
native/src/: dart_api_dl.c  pk_bridge.cpp  pk_manager.cpp  pk_transaction.cpp
native/test/: CMakeLists.txt  test_manager.cpp  test_transaction.cpp  test_types.cpp
scripts/: asan.sh  clang_format.sh  clang_tidy.sh  generate_proxies.sh
test/: client_test.dart  codec_test.dart  details_test.dart  dispatcher_test.dart  enums_test.dart  package_test.dart  repo_test.dart  transaction_test.dart  types_test.dart
(+9 files in other folders)
